--- a/Patient.Api/Patient.Api/Components/Layout/Main/Menus/MainMenu.razor
+++ b/Patient.Api/Patient.Api/Components/Layout/Main/Menus/MainMenu.razor
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row pt-5">
         <div class="col-3 text-start">
-            <p>LOGO?</p>
+            @* <p>LOGO?</p> *@
         </div>
         <div class="col d-flex mx-5 justify-content-center">
             <div class="nav-item">
