--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/ReportPreview.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/ReportPreview.razor
@@ -29,7 +29,7 @@
         {
             <div class="mx-5">
                 <CascadingValue Value="reportToShow">
-                    <Patient.Api.Components.Pages.AdditionalComponents.ReportPreviewComponent />
+                    <Patient.Api.Components.Pages.PatientPages.Reports.AdditionalComponents.ReportPreviewComponent />
                 </CascadingValue>
             </div>
         }       
