--- a/Patient.Api/Patient.Api/Components/Layout/Main/AdditionalComponents/DemoSign.razor
+++ b/Patient.Api/Patient.Api/Components/Layout/Main/AdditionalComponents/DemoSign.razor
@@ -1,7 +1,7 @@
 ﻿
 
 
-<h3 style="background-color: rgb(144, 238, 207); ">Demo</h3>
+<h3 style="background-color: rgb(144, 238, 207); ">Demo (in developing progress)</h3>
 
 
 
