--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/MainPanel/AdditionalComponents/SummaryComponent.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/MainPanel/AdditionalComponents/SummaryComponent.razor
@@ -5,6 +5,7 @@
 
 @inject IHttpContextAccessor httpContextAccesor
 @inject IReportRepository _reportRepository
+@inject IPrescriptionRequestRepository _prescriptionRequestRepository
 @inject NavigationManager _navigationManager
 
 
@@ -20,7 +21,8 @@
         </div>
         <div class="col">
             <MudPaper Class="pa-4 ma-2 summary-item" Elevation="3" Style="cursor: pointer;" @onclick='() => RedirectTo("recepty")'>
-                Recepty
+                <h4>Prośby o wystawienie recepty</h4>
+                <h4>@prescriptionRequestsNumber</h4>
             </MudPaper>
         </div>
         <div class="col">
@@ -45,26 +47,15 @@
 
     private Patient.Domain.Entities.Actors.Doctor doctor = new();
 
-
-
-    //charts
-    private List<ChartSeries> reportSeries = new List<ChartSeries>();
-
-    private string[] XAxisLabelsReports = { "Lacznie" };
-
     private int reportsNumber;
+    private int prescriptionRequestsNumber;
 
     protected override async Task OnInitializedAsync()
     {
 
         doctor = await _doctorManager.GetUserAsync(httpContextAccesor.HttpContext.User);
-
-
         reportsNumber = await _reportRepository.GetDoctorReportsNumber(doctor);
-        // reportSeries.Add( new() { Name = "Raporty", Data = new double[] { 100 } });
-        // reportSeries.Add(new() { Name = "Sprawdzone raporty dzis", Data = new double[] { 0 } });
-
-
+        prescriptionRequestsNumber = await _prescriptionRequestRepository.CountDoctorsPrescriptionRequests(doctor.Id);
 
     }
 
